Convert List.of() to Java 8 compatible alternatives in WebMvcSseIntegrationTests.java
Co-Authored-By: 于泽棋 <finyu@webank.com>